# comp-math

./: .gitignore  README.md
.github/workflows/: cmake.yml
1-WaveParallelizer/: CMakeLists.txt  README.md  grid.txt
1-WaveParallelizer/src/: main.c
1-WaveParallelizer/src/python/: drawer.py  requirments.txt
2-MapleSplines/: README.md  b-splines.mw  cubic-splines.mw  splines.mw
3-SVD/: README.md
3-SVD/python/: basic_svd.py  great_svd.py  image_utils.py  py_svd.py  saver.py
3-SVD/pythonProject1/: image_utils.py  py_svd.py
4-FEM/: README.md  main.py  requirements.txt  utils.py
